fix(demo) iphone clouds overflow (#107)

--- a/apps/ngx-popovers/src/app/pages/landing/landing-clouds/landing-clouds.component.scss
+++ b/apps/ngx-popovers/src/app/pages/landing/landing-clouds/landing-clouds.component.scss
@@ -1,7 +1,3 @@
 .clouds {
   width: 100%;
-
-  &-item {
-    opacity: .8;
-  }
 }
